<resources>
    <string name="app_name">KertShop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">KertShop</string>
    <string name="nav_header_subtitle">Felhasználónév</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="kertshopapp">KertShop App</string>

    <string name="menu_home">Főoldal</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="login_Email">E-mail</string>
    <string name="login_password">Jelszó</string>
    <string name="login_button">Bejelentkezés</string>
    <string name="login_to_regist">Regisztráció</string>
    <string name="regist_Email">E-mail</string>
    <string name="regist_password">Jelszó</string>
    <string name="regist_button">Regisztráció</string>
    <string name="regist_username">Felhasználónév</string>
    <string name="regist_password_again">Jelszó újra</string>
    <string name="regist_title">Regisztráció</string>
    <string name="regist_address">Cím</string>
    <string name="login_title">Bejelentkezés</string>
    <string name="back">Vissza</string>

    <string name="product_description">Termék leírása.</string>
    <string name="title_placeholder">Title</string>
    <string name="item_placeholder">Leírás</string>
    <string name="item_info_placeholder">Here is some news</string>
    <string name="cart">Cart</string>
    <string name="views">Nézet</string>
    <string name="kijelentkez_s">Kijelentkezés</string>
    <string name="setting">Beállítás</string>
    <string name="search">Search</string>
    <string name="kosarba">Kosárba</string>
    <string name="delete">Törlés</string>
    <string name="kertshop_app">KertShop APP</string>

    <string-array name="shopping_item_names">
        <item>Fűnyírógép</item>
        <item>Fűmag 5kg</item>
        <item>Fiskars Ásó</item>
        <item>Metszőolló</item>
        <item>Virágföld 20l</item>
        <item>Gereblye</item>
        <item>Balta 4kg</item>
        <item>Permetező</item>
        <item>Öntözőfej</item>
        <item>Láncfűrész</item>
    </string-array>

    <string-array name="shopping_item_desc">
        <item>50 cm3 4ütemű benzinmotor</item>
        <item>Tavaszi kertfelújításhoz</item>
        <item>140cm hossz</item>
        <item>2év garancia</item>
        <item>Természetes trágyával</item>
        <item>120cm műanyag</item>
        <item>Edzett acél, ergonomikus markolat</item>
        <item>50 cm3 4 ütemű, 15l tartály</item>
        <item>Gyorscsatlakozós öntözőfej</item>
        <item>30 cm3 2 ütemű, 2 év garancia</item>
    </string-array>

    <array name="shopping_item_rates">
        <item>5</item>
        <item>5</item>
        <item>4.5</item>
        <item>3.5</item>
        <item>2</item>
        <item>4</item>
        <item>4.5</item>
        <item>4</item>
        <item>5</item>
        <item>4.5</item>
    </array>

    <array name="shopping_item_images">
        <item>@drawable/funyiro</item>
        <item>@drawable/fumag</item>
        <item>@drawable/aso</item>
        <item>@drawable/metszoollo</item>
        <item>@drawable/viragfold</item>
        <item>@drawable/gereblye</item>
        <item>@drawable/balta</item>
        <item>@drawable/permetezo</item>
        <item>@drawable/locsolofej</item>
        <item>@drawable/lancfuresz</item>
    </array>
    <array name="shopping_item_price">
        <item>185.000 Ft</item>
        <item>2.500 Ft</item>
        <item>7.500 Ft</item>
        <item>4.000 Ft</item>
        <item>3.500 Ft</item>
        <item>5.000 Ft</item>
        <item>9.850 Ft</item>
        <item>45.000 Ft</item>
        <item>6.000 Ft</item>
        <item>85.000 Ft</item>
    </array>
</resources>